# redis-query

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/util/: cli.rs  mod.rs  redis.rs
