[package]
name = "redis-query"
version = "0.1.0"
authors = ["Luca Pinelli <pinelli.luca@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitfailure = "0.5.1"
failure = "0.1.7"
redis = "0.15.1"
structopt = "0.3.12"
