[package]
name = "redis-query"
version = "0.1.11"
authors = ["Luca Pinelli <pinelli.luca@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "A tool to search keys in multiple Redis' databases"
readme = "README.md"
homepage = "https://github.com/lucapinelli/redis-query"
repository = "https://github.com/lucapinelli/redis-query"
keywords = ["cli", "redis"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
colored = "2.0.0"
exitfailure = "0.5.1"
failure = "0.1.8"
redis = "0.23.3"
